--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,10 @@ dependencies:
   easy_localization: ^3.0.1
   provider: ^6.0.3
   shared_preferences: ^2.0.15
+  dio: ^4.0.6
+  vexana: ^2.8.1
+  json_serializable: ^6.3.1
+  json_annotation: ^4.6.0
 
 dev_dependencies:
   flutter_test:
